API Tips show methods

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4349,6 +4349,8 @@ input[type=button].btn-block {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+    margin-bottom: 0.5rem;
+
 }
 
 .navbar > .container,
