--- a/public/css/index.css
+++ b/public/css/index.css
@@ -76,13 +76,18 @@ html, body {
     font-size: 84px;
 }
 
-.links > a {
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
+.links > form  {
+    padding        : 0 25px;
+    font-size      : 13px;
+    font-weight    : 600;
+    letter-spacing : .1rem;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform : uppercase;
+    display        : inline-block;
+}
+
+.links > form > button{
+    background-color: #1b1e21;
 }
 
 .m-b-md {
